# fchess_server

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ChessServer.sln  HTMLPage1.html  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  browser_console_log.txt  browserconsole_nonresigning.txt  browserconsole_resigning.txt  chessboard-1.0.0.min.css  fchess_server.sln  fchess_server.vcxproj  fchess_server.vcxproj.filters  index-chessground.html  index.html  index4.html  index5.html  index6.html  index7.html  index_cg.html  index_cg_ori.html  last_interaction.txt  noresigning.html  saran chatgpt.txt  serverlog_after.txt  serverlog_create.txt  serverlog_init.txt
fchess_server.dir/Debug/: fchess_server.exe.recipe
fchess_server.dir/Debug/fchess_server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  fchess_server.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: main.cpp  main.cpp.bak  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main7.cpp  main_ bad.cpp
www/: caro.html  index.html  index_cg0.html
